--- a/style.css
+++ b/style.css
@@ -26,13 +26,21 @@ body{
     filter: drop-shadow(0 0 15px black);
     padding: 30px;
     border-radius: 20px;
+    transition: all ease .55s;
+}
+
+.block:hover{
+    transform: translateY(-5px);
+    filter: drop-shadow(0 5px 15px black);
 }
 
 .block img{
+    background: var(--custom-color);
     width: 300px;
     height: auto;
-    padding: 20px;
+    padding: 30px;
     margin: 20px 20px 0 20px;
+    border-radius: 20px;
 }
 
 .block .icons{
@@ -77,7 +85,44 @@ body{
     border-left: 2px solid black;
 }
 
-.radius{
-    border: 2px solid black;
-    border-radius: 20px;
+label{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin-top: 20px;
+    font-weight: 600;
+    font-size: 20px;
+}
+
+#color{
+    margin-left: 10px;
+    border: none;
+}
+
+@media(max-width:500px){
+    .block{
+        padding: 10px;
+        height: 400px;
+    }
+    
+    .block img{
+        width: 200px;
+        margin-top: 0;
+        padding: 5px 10px 5px 10px;
+    }
+
+    .block .icons{
+        margin-top: 2px;
+    }
+
+    .block .icons  i{
+        font-size: 27px;
+    }
+
+    label{
+        margin-top: 5px;
+        font-weight: 500;
+        font-size: 16px;
+    }
 }
